0x07-python-test_driven_development/tests/100-matrix_mul.txt
>>> matrix_mul = __import__('100-matrix_mul').matrix_mul
>>> m_a = [
... [1,2],
... ,[1,1]]
  File "<stdin>", line 3
    ,[1,1]]
    ^
SyntaxError: invalid syntax
>>> m_a = [
... [1,2],
... [1,1]]
>>> m_b = m_a
>>> print(matrix_mul(m_a, m_b))
[[3, 4], [2, 3]]
>>> print(matrix_mul([[1, 1, 1], [1,1,1], [1,1,1]], [2,3,4]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 15, in matrix_mul
    raise TypeError("m_b must be a list of lists")
TypeError: m_b must be a list of lists
>>> print(matrix_mul([[1, 1, 1], [1,1,1], [1,1,1]], [[1.1, 2,3], [2, 1, 1], [1,1,2]]))
[[4.1, 4, 6], [4.1, 4, 6], [4.1, 4, 6]]
>>> print(matrix_mul([[1, 1, 1], [1,1,1], [-1,-1,-1]], [[1.1, 2,3], [2, 1, 1], [-1,-1,-2]]))
[[2.1, 2, 2], [2.1, 2, 2], [-2.1, -2, -2]]
>>> print(matrix_mul())
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: matrix_mul() missing 2 required positional arguments: 'm_a' and 'm_b'
>>> print(matrix_mul('flas', [[1,2,4]]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 9, in matrix_mul
    raise TypeError("m_a must be a list")
TypeError: m_a must be a list
>>> print(matrix_mul([[1]], [[1]]))
[[1]]
>>> print(matrix_mul([[1]], [[]]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 19, in matrix_mul
    raise ValueError("m_b can't be empty")
ValueError: m_b can't be empty
>>> print(matrix_mul([[]], [[]]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 17, in matrix_mul
    raise ValueError("m_a can't be empty")
ValueError: m_a can't be empty
>>> print(matrix_mul([[2,-1]], [[-1,2]]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 33, in matrix_mul
    raise ValueError("m_a and m_b can't be multiplied")
ValueError: m_a and m_b can't be multiplied
>>> print(matrix_mul([2,-1,1], [[-1,2,1]]))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/zakplugedin/Desktop/Alx/alx-higher_level_programming/0x07-python-test_driven_development/100-matrix_mul.py", line 13, in matrix_mul
    raise TypeError("m_a must be a list of lists")
TypeError: m_a must be a list of lists
>>> 

